--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,15 +41,18 @@ dependencies:
   firebase_auth: ^4.16.0
   intl: ^0.19.0
   provider: ^6.1.1
-  change_app_package_name:
-  http:
   shimmer: ^3.0.0
+  lottie: ^2.3.2
+  flutter_launcher_icons: ^0.11.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo1.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
